--- a/index.html
+++ b/index.html
@@ -10,11 +10,38 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .top {
+            background-color: purple;
+            width: 100%;
+            height: 50%;
+        }
+
+        .bottom {
+            background-color: orange;
+            width: 100%;
+            height: 50%;
+        }
+    </style>
+
     <title>Hello, world!</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="top">
+        <h1>Hello, world!</h1>
+    </div>
+    <div class="bottom">
+        <h2>Teste</h2>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
