--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <body>
     <div class="top">
         <h1>Hello, world!</h1>
+
+        <div id="like_button_container"></div>
+
     </div>
     <div class="bottom">
         <h2>Teste</h2>
@@ -54,6 +57,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+    <!-- Load our React component. -->
+    <script src="like_button.js"></script>
 </body>
 
 </html>
